adding the database, config, dto, usecase, domain and repository of fetch products
